--- a/miniverse/html/index.html
+++ b/miniverse/html/index.html
@@ -12,8 +12,9 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg" style="background-color: rgb(0, 87, 4);">
             <div class="container-fluid">
+                <img src="../images/logo_miniverse.png" style="width: 100px;">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -104,21 +105,81 @@
         </div>
     </div>
 
-    <div class="container" style="margin-top: 40px;">
+    <div class="container " style="margin-top: 40px;">
         <div class="row">
-            <div class="col divs_funcoes_site">
-                <div class="div_diferencial_site">
-                </div>
-            </div>
-            <div class="col divs_funcoes_site">
+            <div class="col align-items-center divs_funcoes_site">
                 <div class="div_diferencial_site">
 
                 </div>
             </div>
-            <div class="col divs_funcoes_site">
+            <div class="col align-items-center divs_funcoes_site">
                 <div class="div_diferencial_site">
 
                 </div>
+            </div>
+            <div class="col align-items-center divs_funcoes_site">
+                <div class="div_diferencial_site">
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container" style="margin-top: 40px;">
+        <div class="row text-center">
+            <h2>Lançamentos</h2>
+            <hr class="hr_lancamento">
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card’s content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card’s content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card’s content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card’s content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                
             </div>
         </div>
     </div>
