--- a/miniverse/html/produtos.html
+++ b/miniverse/html/produtos.html
@@ -63,70 +63,112 @@
 
 
     <!--Produtos da Marvel-->
-    <section id="marvel" class="marca-section">
-        <div class="container">
-            <h1>Marvel</h1>
-            <div class="row">
-                <div class="col">
-                </div>
+    <div class="container marca-section" id="marvel">
+        <div class="text-center mb-4">
+            <img src="../images/produtos_marvel/HomemDeFerro.png" class="img-fluid" alt="Marvel">
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <!-- Card produto -->
+            </div>
+            <div class="col-md-4">
+                <!-- Card produto -->
+            </div>
+            <div class="col-md-4">
+                <!-- Card produto -->
             </div>
         </div>
-    </section>
+    </div>
 
     <!--Produtos da DC-->
-    <section id="dc" class="marca-section">
-        <div class="container">
-            <h1>DC</h1>
-            <div class="row">
-                <div class="col">
-                </div>
+    <div class="container marca-section d-none" id="dc">
+        <div class="text-center mb-4">
+            <img src="../images/produtos_dc/Batman.png" class="img-fluid" alt="DC">
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <!-- Card produto -->
+            </div>
+            <div class="col-md-4">
+                <!-- Card produto -->
+            </div>
+            <div class="col-md-4">
+                <!-- Card produto -->
             </div>
         </div>
-    </section>
+    </div>
 
     <!--Produtos do Dragon Ball-->
-    <section id="dragonball" class="marca-section">
-        <div class="container">
-            <h1>DB</h1>
-            <div class="row">
-                <div class="col">
-                </div>
+    <div class="container marca-section d-none" id="dragonBall">
+        <div class="text-center mb-4">
+            <img src="../images/produtos_dragonBall/Goku.png" class="img-fluid" alt="Dragon Ball">
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <!-- Card produto -->
+            </div>
+            <div class="col-md-4">
+                <!-- Card produto -->
+            </div>
+            <div class="col-md-4">
+                <!-- Card produto -->
             </div>
         </div>
-    </section>
+    </div>
 
     <!--Produtos de The Last Of Us-->
-    <section id="tlou" class="marca-section">
-        <div class="container">
-            <h1>TLOU</h1>
-            <div class="row">
-                <div class="col">
-                </div>
+    <div class="container marca-section d-none" id="tlou">
+        <div class="text-center mb-4">
+            <img src="../images/produtos_tlou/Abby.png" class="img-fluid" alt="The Last of Us">
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <!-- Card produto -->
+            </div>
+            <div class="col-md-4">
+                <!-- Card produto -->
+            </div>
+            <div class="col-md-4">
+                <!-- Card produto -->
             </div>
         </div>
-    </section>
+    </div>
 
     <!--Produtos de Star Wars-->
-    <section id="starwars" class="marca-section">
-        <div class="container">
-            <h1>SW</h1>
-            <div class="row">
-                <div class="col">
-                </div>
+    <div class="container marca-section d-none" id="starWars">
+        <div class="text-center mb-4">
+            <img src="" class="img-fluid" alt="Star Wars">
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <!-- Card produto -->
+            </div>
+            <div class="col-md-4">
+                <!-- Card produto -->
+            </div>
+            <div class="col-md-4">
+                <!-- Card produto -->
             </div>
         </div>
-    </section>
+    </div>
 
     <!--Produtos de Seres Mitológicos-->
-    <section id="seresmito" class="marca-section">
-        <div class="container">
-            <h1>Mito</h1>
-            <div class="row">
-                <div class="col">
-                </div>
+    <div class="container marca-section d-none" id="seresMito">
+        <div class="text-center mb-4">
+            <img src="" class="img-fluid" alt="Seres mitológicos">
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <!-- Card produto -->
+            </div>
+            <div class="col-md-4">
+                <!-- Card produto -->
+            </div>
+            <div class="col-md-4">
+                <!-- Card produto -->
             </div>
         </div>
-    </section>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
